--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   english_words: ^3.1.5
   validators: ^2.0.0+1
+  http: ^0.12.2
+  url_launcher: ^5.7.2
 
 dev_dependencies:
   flutter_test:
