--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   validators: ^2.0.0+1
   http: ^0.12.2
   url_launcher: ^5.7.2
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
